--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -18,11 +18,10 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .skill {
-  fill: white;
+  fill: gray;
   width: 100;
   height:100;
 }
 .skill:hover {
-  fill: yellow;
-
+  fill: #374151;
 }
